--- a/package.xml
+++ b/package.xml
@@ -3,29 +3,11 @@
   <name>rosbridge_server_launcher</name>
   <version>0.0.0</version>
   <description>The rosbridge_server_launcher package</description>
-
-  <!-- One maintainer tag required, multiple allowed, one person per tag -->
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="tunchunairarko@gmail.com">Rakin Sarder</maintainer>
-
-
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
   <license>GPLv3</license>
-
-
-  <!-- Url tags are optional, but multiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/rosbridge_server_launcher</url> -->
-
-
-  <!-- Author tags are optional, multiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintainers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <depend>rosbridge_library</depend>
+  <depend>rosbridge_msgs</depend>
+  <depend>rosbridge_server</depend>
 
 
   <!-- The *depend tags are used to specify dependencies -->
